# GBBuddy

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.zig  build.zig.zon
cmake/: ProjectConfig.cmake
src/: application.cpp  application.h  bitutils.zig  cpu.zig  gameboy.zig  instructions.zig  logger.zig  main.cpp  main.zig  mmu.zig  platform.cpp  platform.h  renderer.cpp  renderer.h  version.h.in  window.cpp  window.h
src/common/: CMakeLists.txt  bits.h  bitwise.h  dialog.cpp  fs.cpp  fs.h  log.h  types.h
src/core/: CMakeLists.txt  bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  gameboy.cpp  gameboy.h  mmu.cpp  mmu.h
src/core/mappers/: mapper.cpp  mapper.h  nombc.cpp  nombc.h
src/utils/: bitwise.cpp  bitwise.h  dialog.cpp  dialog.h  logger.h
test/: CMakeLists.txt  bitwisetest.cpp  cputest.cpp  mmutest.cpp
